ui alignment and font size fixes for dashboard-hw

--- a/vtr-ui/src/app/components/ui/ui-button/ui-button.component.scss
+++ b/vtr-ui/src/app/components/ui/ui-button/ui-button.component.scss
@@ -25,14 +25,14 @@
 		}
 		.button {
 			@media #{$black-on-white} {
-				
+
 				border: 0.1rem solid $dark;
-				
+
 			}
 			@media #{$white-on-black} {
-				
+
 				border: 0.1rem solid $light;
-				
+
 			}
 			@media #{$mediaquery_X4} {
 				min-width: 10rem;
@@ -45,7 +45,7 @@
 			background: $gradient_main;
 			border: none;
 			color: $light;
-			font-size: $fontsize_md;
+			font-size: $fontsize_sm;
 			font-weight: $weight_bold;
 			text-align: center;
 			text-decoration: none;
